# ladybug_tv

./: .env.example  .gitignore  FILES_CREATED.txt  PROJECT_STRUCTURE.md  README.md  SETUP_COMPLETE.md  Taskfile.yml  docker-compose.prod.yml  docker-compose.yml  packages.txt  pyproject.toml  rxconfig.py
backend/: config.py  database.py  main.py
backend/api/v1/: auth.py  channels.py  epg.py  playlist.py  streams.py
backend/models/: channel.py  epg.py  user.py
backend/services/: playlist_service.py
config/: channels.json  epg.yaml  monitor.yaml  prometheus.yml
docker/: Dockerfile.backend  Dockerfile.reflex
epg_service/: parser.py  tasks.py
ladybug_tv/: .env.example  .gitignore  UI_README.md  docker-compose.yml  ladybug_tv.py  pyproject.toml  requirements.txt
ladybug_tv/components/: channel_list.py  epg_display.py  navbar.py  video_player.py
ladybug_tv/config/: prometheus.yml
ladybug_tv/monitor/: Dockerfile  README.md  go.mod  main.go
ladybug_tv/pages/: index.py  login.py  settings.py
ladybug_tv/state/: app_state.py  auth_state.py  channel_state.py
ladybug_tv/utils/: api_client.py  constants.py
stream_monitor/: Dockerfile  go.mod
stream_monitor/cmd/: main.go
stream_monitor/internal/health/: health.go
stream_monitor/internal/metrics/: metrics.go
stream_monitor/internal/monitor/: monitor.go
stream_monitor/pkg/config/: config.go
stream_monitor/pkg/types/: types.go
stream_relay/: server.py  transcoder.py
